fix: digital option tab scrollbar css (#5321)

--- a/src/features/components/organisms/available-options/styles.module.scss
+++ b/src/features/components/organisms/available-options/styles.module.scss
@@ -11,15 +11,6 @@
 
 .tab_container {
     position: relative;
-    overflow: scroll;
-    scrollbar-width: none;
-    &::-webkit-scrollbar {
-        display: none;
-    }
-
-    @include breakpoints(tablet) {
-        overflow: scroll;
-    }
 }
 
 .scroll_buttons {
@@ -43,11 +34,13 @@
 }
 
 .scroll_container {
-    max-inline-size: 100vw;
-    @include breakpoints(phone) {
-        overflow: hidden !important;
-        white-space: nowrap;
-        justify-content: start;
+    overflow: scroll;
+    scrollbar-width: none;
+    overscroll-behavior: contain;
+    scroll-snap-type: x mandatory;
+    max-inline-size: calc(100vw - 1.5rem);
+    &::-webkit-scrollbar {
+        display: none;
     }
 }
 .is_show_left,
